--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
       "test": "jest"
    },
    "dependencies": {
+      "@types/multer": "^1.4.3",
       "bcryptjs": "^2.4.3",
       "bee-queue": "^1.2.3",
       "celebrate": "^12.1.1",
@@ -22,6 +23,7 @@
       "express-async-errors": "^3.1.1",
       "handlebars": "^4.7.6",
       "jsonwebtoken": "^8.5.1",
+      "mongodb": "^3.5.8",
       "mssql": "^4.0.4",
       "multer": "^1.4.2",
       "nodemailer": "^6.4.8",
@@ -41,11 +43,15 @@
       "@typescript-eslint/eslint-plugin": "^3.1.0",
       "@typescript-eslint/parser": "^3.1.0",
       "eslint": "^5.16.0",
+      "eslint-config-airbnb": "^18.1.0",
       "eslint-config-airbnb-base": "^13.2.0",
       "eslint-config-prettier": "^6.0.0",
       "eslint-import-resolver-typescript": "^2.0.0",
-      "eslint-plugin-import": "^2.18.0",
+      "eslint-plugin-import": "^2.20.1",
+      "eslint-plugin-jsx-a11y": "^6.2.3",
       "eslint-plugin-prettier": "^3.1.0",
+      "eslint-plugin-react": "^7.19.0",
+      "eslint-plugin-react-hooks": "^2.5.0",
       "jest": "^26.0.1",
       "prettier": "^1.18.2",
       "reflect-metadata": "^0.1.10",
