change - mssql to postgres - jwt subject user str

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
-APP_WEB_URL=http://localhost:3333
+APP_API_URL=http://10.0.0.109:3333
+APP_WEB_URL=http://localhost:3000
 NODE_ENV=development
 
 # Auth
