--- a/package.json
+++ b/package.json
@@ -24,9 +24,10 @@
       "handlebars": "^4.7.6",
       "jsonwebtoken": "^8.5.1",
       "mongodb": "^3.5.8",
-      "mssql": "^4.0.4",
       "multer": "^1.4.2",
       "nodemailer": "^6.4.8",
+      "pg": "^8.2.1",
+      "pg-hstore": "^2.3.3",
       "sequelize": "^5.9.4",
       "tsyringe": "^4.3.0",
       "uuidv4": "^6.1.0"
