--- a/package.json
+++ b/package.json
@@ -1,66 +1,77 @@
 {
-   "name": "template-node",
-   "version": "1.0.0",
-   "main": "index.js",
-   "license": "MIT",
-   "scripts": {
-      "build": "tsc",
-      "dev:server": "ts-node-dev -r tsconfig-paths/register --inspect --transpileOnly --ignore-watch node_modules src/shared/infra/http/server.ts",
-      "start": "ts-node src/index.ts",
-      "typeorm": "ts-node-dev -r tsconfig-paths/register  ./node_modules/typeorm/cli.js",
-      "test": "jest"
-   },
-   "dependencies": {
-      "@types/multer": "^1.4.3",
-      "bcryptjs": "^2.4.3",
-      "bee-queue": "^1.2.3",
-      "celebrate": "^12.1.1",
-      "class-transformer": "^0.2.3",
-      "cors": "^2.8.5",
-      "date-fns": "^2.0.0-beta.5",
-      "dotenv": "^8.2.0",
-      "express": "^4.17.1",
-      "express-async-errors": "^3.1.1",
-      "handlebars": "^4.7.6",
-      "jsonwebtoken": "^8.5.1",
-      "mongodb": "^3.5.8",
-      "multer": "^1.4.2",
-      "nodemailer": "^6.4.8",
-      "pg": "^8.2.1",
-      "pg-hstore": "^2.3.3",
-      "sequelize": "^5.9.4",
-      "tsyringe": "^4.3.0",
-      "uuidv4": "^6.1.0"
-   },
-   "devDependencies": {
-      "@types/bcryptjs": "^2.4.2",
-      "@types/cors": "^2.8.6",
-      "@types/express": "^4.17.6",
-      "@types/hapi__joi": "^17.1.2",
-      "@types/jest": "^25.2.3",
-      "@types/jsonwebtoken": "^8.5.0",
-      "@types/node": "^14.0.9",
-      "@types/nodemailer": "^6.4.0",
-      "@typescript-eslint/eslint-plugin": "^3.1.0",
-      "@typescript-eslint/parser": "^3.1.0",
-      "eslint": "^5.16.0",
-      "eslint-config-airbnb": "^18.1.0",
-      "eslint-config-airbnb-base": "^13.2.0",
-      "eslint-config-prettier": "^6.0.0",
-      "eslint-import-resolver-typescript": "^2.0.0",
-      "eslint-plugin-import": "^2.20.1",
-      "eslint-plugin-jsx-a11y": "^6.2.3",
-      "eslint-plugin-prettier": "^3.1.0",
-      "eslint-plugin-react": "^7.19.0",
-      "eslint-plugin-react-hooks": "^2.5.0",
-      "jest": "^26.0.1",
-      "prettier": "^1.18.2",
-      "reflect-metadata": "^0.1.10",
-      "ts-jest": "^26.1.0",
-      "ts-node": "3.3.0",
-      "ts-node-dev": "^1.0.0-pre.44",
-      "tsconfig-paths": "^3.9.0",
-      "typeorm": "^0.2.25",
-      "typescript": "^3.9.3"
-   }
+  "name": "template-node",
+  "version": "1.0.0",
+  "main": "index.js",
+  "license": "MIT",
+  "scripts": {
+    "build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files",
+    "dev:server": "ts-node-dev -r tsconfig-paths/register --inspect --transpileOnly --ignore-watch node_modules src/shared/infra/http/server.ts",
+    "queue": "nodemon src/queue.js",
+    "start": "node dist/server.js",
+    "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
+  },
+  "dependencies": {
+    "@types/multer": "^1.4.3",
+    "bcryptjs": "^2.4.3",
+    "bee-queue": "^1.2.3",
+    "celebrate": "^12.1.1",
+    "class-transformer": "^0.2.3",
+    "cors": "^2.8.5",
+    "date-fns": "^2.0.0-beta.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
+    "express-brute": "^1.0.1",
+    "handlebars": "^4.7.6",
+    "jsonwebtoken": "^8.5.1",
+    "mongodb": "^3.5.8",
+    "multer": "^1.4.2",
+    "nodemailer": "^6.4.8",
+    "pg": "^8.2.1",
+    "pg-hstore": "^2.3.3",
+    "sequelize": "^5.9.4",
+    "tsyringe": "^4.3.0",
+    "uuidv4": "^6.1.0"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.10.4",
+    "@babel/core": "^7.10.4",
+    "@babel/node": "^7.10.4",
+    "@babel/plugin-proposal-class-properties": "^7.10.4",
+    "@babel/plugin-proposal-decorators": "^7.10.4",
+    "@babel/preset-env": "^7.10.4",
+    "@babel/preset-typescript": "^7.10.4",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/cors": "^2.8.6",
+    "@types/express": "^4.17.6",
+    "@types/hapi__joi": "^17.1.2",
+    "@types/jest": "^25.2.3",
+    "@types/jsonwebtoken": "^8.5.0",
+    "@types/node": "^14.0.9",
+    "@types/nodemailer": "^6.4.0",
+    "@typescript-eslint/eslint-plugin": "^3.1.0",
+    "@typescript-eslint/parser": "^3.1.0",
+    "babel-plugin-module-resolver": "^4.0.0",
+    "babel-plugin-transform-typescript-metadata": "^0.3.0",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb": "^18.1.0",
+    "eslint-config-airbnb-base": "^13.2.0",
+    "eslint-config-prettier": "^6.0.0",
+    "eslint-import-resolver-typescript": "^2.0.0",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.0",
+    "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-react-hooks": "^2.5.0",
+    "jest": "^26.0.1",
+    "prettier": "^1.18.2",
+    "reflect-metadata": "^0.1.10",
+    "sucrase": "^3.15.0",
+    "ts-jest": "^26.1.0",
+    "ts-node": "3.3.0",
+    "ts-node-dev": "^1.0.0-pre.44",
+    "tsconfig-paths": "^3.9.0",
+    "typeorm": "^0.2.25",
+    "typescript": "^3.9.3"
+  }
 }
