--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
   },
   "dependencies": {
-    "@types/multer": "^1.4.3",
+    "aws-sdk": "^2.714.2",
     "bcryptjs": "^2.4.3",
     "bee-queue": "^1.2.3",
     "celebrate": "^12.1.1",
@@ -23,12 +23,16 @@
     "express-async-errors": "^3.1.1",
     "express-brute": "^1.0.1",
     "handlebars": "^4.7.6",
+    "ioredis": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
+    "mime": "^2.4.6",
     "mongodb": "^3.5.9",
     "multer": "^1.4.2",
     "nodemailer": "^6.4.8",
     "pg": "^8.2.1",
     "pg-hstore": "^2.3.3",
+    "rate-limiter-flexible": "^2.1.9",
+    "redis": "^3.0.2",
     "sequelize": "^5.9.4",
     "tsyringe": "^4.3.0",
     "uuidv4": "^6.1.0"
@@ -45,10 +49,13 @@
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.6",
     "@types/hapi__joi": "^17.1.2",
+    "@types/ioredis": "^4.17.2",
     "@types/jest": "^25.2.3",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/multer": "^1.4.3",
     "@types/node": "^14.0.9",
     "@types/nodemailer": "^6.4.0",
+    "@types/redis": "^2.8.25",
     "@typescript-eslint/eslint-plugin": "^3.1.0",
     "@typescript-eslint/parser": "^3.1.0",
     "babel-plugin-module-resolver": "^4.0.0",
