feat. aws ses email and upload file aws s3

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,9 @@ NODE_ENV=development
 # Auth
 APP_SECRET=templatenoderocketseat
 
+# Storage
+STORAGE_DRIVER=s3
+
 # AWS
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
@@ -20,8 +23,5 @@ REDIS_HOST=localhost
 REDIS_PORT=6379
 REDIS_PASS=
 
-# Storage
-STORAGE_DRIVER=disk
-
 # Email
-MAIL_DRIVER=ethereal
+MAIL_DRIVER=ses
