--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,8 +26,7 @@ jobs:
       - name: Setup Node.js environment
         uses: actions/setup-node@v2.1.0
         with:
-          node-version: 12.x
-          check-latest: true  
+          node-version: ${{ matrix.node-version }}
 
       # Cache directory dependencies
       - name: Get yarn cache directory path
