taking out ensureaAuthenticated from orders.routes

--- a/ormconfig.example.json
+++ b/ormconfig.example.json
@@ -19,7 +19,7 @@
     "type": "mongodb",
     "host": "localhost",
     "port": 27017,
-    "database": "test",
+    "database": "mongodb",
     "useUnifiedTopology": true
   }
 ]
